adding cards code from proto branch

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,31 +1,65 @@
+.cards-container {
+  margin-top:40px;
+}
+
 .cards > ul {
   list-style: none;
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 16px;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-gap: 20px;
 }
 
 .cards > ul > li {
-  border: 1px solid var(--highlight-background-color);
-  background-color: var(--background-color)
+  background-color: #F6F6F6;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 4px 1pc 0 hsla(0,0%,47%,.16);
+  box-shadow: 0 4px 1pc 0 hsla(0,0%,47%,.16);
+  padding: 16px 24px 40px;
+
 }
 
 .cards .cards-card-body {
-  margin: 16px;
+  margin: 16px 0 0 0;
+}
+.cards .cards-card-body .card-calendar span{
+  margin-left: 10px;
+
+}
+.cards .cards-card-body .card-calendar SVG{
+  height:15px;
+  width:15px;
 }
 
 .cards .cards-card-image {
   line-height: 0;
+  margin:15px 0 15px 0;
 }
 
 .cards .cards-card-body > *:first-child {
-  margin-top: 0;
+  margin: 0 0 8px 0;
+  font-size:25px;
+  line-height: 32px;
+
+}
+.cards > ul > li p {
+font-size: 16px;
+line-height:24px;
+margin:0;
+
 }
 
 .cards > ul > li img {
   width: 100%;
-  aspect-ratio: 4 / 3;
-  object-fit: cover;
+  height: auto;
+  display: inline-block;
+}
+.cards.demo-cards > ul > li img {
+  width: 40%;
+  height: auto;
+  display: inline-block;
+  left: -5px;
+  position: relative;
+  top: -13px;
 }
