--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -28,31 +28,28 @@
     font-size: var(--body-font-size-m);
   }
 }
-.table table thead tr {
-
+.table thead tr {
   background-color: #E6E6E6;
   color:#1b1b1b;
   border:none;
 }
-.table table thead th{
-
+.table thead th{
   background-color: #E6E6E6;
   color:#1b1b1b;
   border:none;
 }
-.table table thead tr {
+.table thead tr {
   border-bottom: 1px solid;
   background-color:  #E6E6E6;
 }
 
 .table table tbody tr:nth-child(even)
 {
-
   background-color: #F6F6F6;
   border:1px solid #dedede;
 }
 
-.table table th, .table table td {
+.table th, .table table td {
   padding:  20px;
   text-align: left;
 }
