--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -2,9 +2,7 @@
   width: 100%;
   overflow-x: auto;
   overflow: hidden;
-  box-shadow: 0 0 40px 0 rgba(0 0 0 /0.15);
-  -moz-box-shadow: 0 0 40px 0 rgba(0 0 0 / 0.15);
-  -o-box-shadow: 0 0 40px 0 rgba(0 0 0 / 0.15);
+  box-shadow: 0 0 40px 0 rgba(0 0 0 / 15%);
 }
 
 .table table {
@@ -27,10 +25,10 @@
 }
 .table thead tr {
   background-color: #E6E6E6;
-  color:#1b1b1b;
-  border:none;
+  color: #1b1b1b;
+  border: none;
 }
-.table thead th{
+.table thead th {
   background-color: #E6E6E6;
   color:#1b1b1b;
   border:none;
@@ -57,6 +55,6 @@
 }
 
 /* bordered variant */
-.table.bordered th, .table.bordered table td {
+.table.bordered th, .table.bordered td {
   border: 1px solid;
 }
