--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -2,7 +2,7 @@
   width: 100%;
   overflow-x: auto;
   overflow: hidden;
-  box-shadow: 0 0 40px 0 rgba(0 0 0 / 15%);
+  box-shadow: 0 0 40px 0 rgba(0 0 0 /15%);
 }
 
 .table table {
@@ -38,8 +38,7 @@
   background-color:  #E6E6E6;
 }
 
-.table tbody tr:nth-child(even)
-{
+.table tbody tr:nth-child(even) {
   background-color: #F6F6F6;
   border:1px solid #dedede;
 }
