--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -13,8 +13,7 @@
 }
 
 @media (min-width: 600px) {
-  .table table {
-    font-size: var(--body-font-size-s);
+  .table table { font-size: var(--body-font-size-s);
   }
 }
 
@@ -23,11 +22,13 @@
     font-size: var(--body-font-size-m);
   }
 }
+
 .table thead tr {
   background-color: #E6E6E6;
   color: #1b1b1b;
   border: none;
 }
+
 .table thead th {
   background-color: #E6E6E6;
   color:#1b1b1b;
@@ -35,7 +36,7 @@
 }
 .table thead tr {
   border-bottom: 1px solid;
-  background-color:  #E6E6E6;
+  background-color: #E6E6E6;
 }
 
 .table tbody tr:nth-child(even) {
