--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -30,10 +30,13 @@
   border-bottom: 1px solid;
 }
 
-.table thead th {
+.table thead th, td {
   background-color: #E6E6E6;
   color:#1b1b1b;
   border:none;
+  padding: 20px;
+  text-align: left;
+}
 }
 
 .table tbody tr:nth-child(even) {
@@ -42,13 +45,13 @@
 }
 
 .table th td {
-  padding:  20px;
+  padding: 20px;
   text-align: left;
 }
 
 /* striped variant */
 .table.striped tbody tr:nth-child(odd) {
-  background-color:  #efefef;
+  background-color: #efefef;
 }
 
 /* bordered variant */
